--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,22 +1,32 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: springboot-service
-  labels:
-    app: simple-kubernets  # Recommended: add labels to metadata
+  name: demo-app
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: simple-kubernets  # This must match the pod template labels
+      app: demo
   template:
     metadata:
       labels:
-        app: simple-kubernets
+        app: demo
     spec:
       containers:
-        - name: springboot-container
+        - name: demo-container
           image: rama396/simple_kubernets:latest
-          imagePullPolicy: Always  # Ensures latest image is pulled (optional)
           ports:
             - containerPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: demo-service
+spec:
+  selector:
+    app: demo
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
+  type: LoadBalancer
